force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/JSON_Object_Field_Set_Field__mdt.object-meta.xml
<CustomObject>
    <label>JSON Object Field Set Field</label>
    <pluralLabel>JSON Object Field Set Fields</pluralLabel>
</CustomObject>