force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Dependency_Order__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Order__c</fullName>
    <label>Dependency Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>