force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Dynamic_Apex_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Apex_Picklist__c</fullName>
    <label>Dynamic Apex Picklist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>