force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Dynamic_Apex_Picklist_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Apex_Picklist_Prefix__c</fullName>
    <label>Dependency Picklist Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>