force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Field_Name_Tree__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_Tree__c</fullName>
    <label>Field Name Tree</label>
    <length>50</length>
    <type>Text</type>
</CustomField>