force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Name__c</fullName>
    <label>Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>