force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Formula_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Formula_Default_Value__c</fullName>
    <label>Formula Default Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>