force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Is_Dependency_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Is_Dependency_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dependency Picklist?</label>
    <type>Checkbox</type>
</CustomField>