force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Is_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Is_Readonly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Readonly?</label>
    <type>Checkbox</type>
</CustomField>