force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Is_Sparse__c.field-meta.xml
<CustomField>
    <fullName>Is_Sparse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://digi-trade.atlassian.net/browse/CRM-350
Sparse table can have no value. When the field is undefined, the field hides.</description>
    <label>Is Sparse?</label>
    <type>Checkbox</type>
</CustomField>