force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Regex. Because Crypto adopts different decimal fractions. We use String as the format and Regex to validate the decimal number.
https://digi-trade.atlassian.net/browse/CRM-235</description>
    <label>Pattern</label>
    <length>20</length>
    <type>Text</type>
</CustomField>