force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Reference_Object__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object__c</fullName>
    <label>Reference Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>JSON_Object_Field_Set_Fields</relationshipLabel>
    <relationshipName>JSON_Object_Field_Set_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>