force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/fields/Template_Literal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Template_Literal_Formula__c</fullName>
    <label>Template Literal Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>