force-app/main/default/objects/JSON_Object_Field_Set_Field__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Name_Tree__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>Dynamic_Apex_Picklist__c</columns>
    <columns>Field_Set_Name__c</columns>
    <columns>Formula_Default_Value__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Required__c</columns>
    <columns>Template_Literal_Formula__c</columns>
    <columns>Type__c</columns>
    <columns>Dependency_Order__c</columns>
    <columns>Is_Dependency_Picklist__c</columns>
    <columns>Is_Readonly__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>